--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
     </div>
 
     <div class="viewall">
-      <a href="Portfolio-Website/projects/index.html" class="btn"><span>View All</span>
+      <a href="/projects/index.html" class="btn"><span>View All</span>
         <i class="fas fa-arrow-right"></i>
       </a>
     </div>
