--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         
         <p>I am CSE'26 Undergrad student at Bengal College Of Engineering & Technology (BCET) , Bidhannagar , Durgapur , West Bengal.
 
-          I am very passionate about improving my coding skills & developing applications & websites.
+          I am very passionate about improving my coding skills & developing applications & websites...
           I build WebApps and Websites using FullStack Development.
           Working for myself to improve my skills.
           Love to build Full-Stack clones. </p>
