--- a/projects/index.html
+++ b/projects/index.html
@@ -67,7 +67,7 @@
   </div>
 
   <div class="backbtn">
-    <a href="/" class="btn">
+    <a href="/#work" class="btn">
         <i class="fas fa-arrow-left"></i>
         <span>Back to Home</span>
   </a>
