--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
       </div>
 
       <div class="box">
-        <h3>quick links</h3>
+        <h3>Quick Links</h3>
         <a href="#home"><i class="fas fa-chevron-circle-right"></i> home</a>
         <a href="#about"><i class="fas fa-chevron-circle-right"></i> about</a>
         <a href="#skills"><i class="fas fa-chevron-circle-right"></i> skills</a>
@@ -410,7 +410,7 @@
       </div>
 
       <div class="box">
-        <h3>contact info</h3>
+        <h3>Contact info</h3>
         <p> <i class="fas fa-phone"></i>+91 959-833-xxxx</p>
         <p> <i class="fas fa-envelope"></i>mukherjeearnab988@gmail.com</p>
         <p> <i class="fas fa-map-marked-alt"></i>West Bengal, India-731224</p>
