--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
 <body oncontextmenu="return false">
 
   <!-- pre loader  -->
-  <div class="loader-container">
+<!--   <div class="loader-container">
     <img draggable="false" src="./assets/images/loader.gif" alt="">
-  </div>
+  </div> -->
 
   <!-- navbar starts -->
   <header>
