--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
                 class="fab fa-github"></i></a></li>
           <li><a class="twitter" aria-label="Twitter" href="https://twitter.com/Arnab_000/" target="_blank"><i
                 class="fab fa-twitter"></i></a></li>
-          <li><a class="instagram" aria-label="Instagram" href="https://www.instagram.com/arnab.000/"><i class="fab fa-instagram"
-                target="_blank"></i></a></li>
+          <li><a class="instagram" aria-label="Instagram" href="https://www.instagram.com/arnab.000/" target="_blank" ><i
+                class="fab fa-instagram"></i></a></li>
         </ul>
       </div>
     </div>
