--- a/index.html
+++ b/index.html
@@ -30,10 +30,6 @@
 
 <body oncontextmenu="return false">
 
-  <!-- pre loader  -->
-<!--   <div class="loader-container">
-    <img draggable="false" src="./assets/images/loader.gif" alt="">
-  </div> -->
 
   <!-- navbar starts -->
   <header>
@@ -57,14 +53,17 @@
 
   <!-- hero section starts -->
   <section class="home" id="home">
+
     <div id="particles-js"></div>
 
     <div class="content">
+
       <h2>Hey There...!!,<br /> I'm Arnab <span>Mukherjee</span></h2>
-      <p>i am into
+      <p>I am into
         <span class="typing-text"></span>
       </p>
-      <a href="#about" class="btn"><span>About Me</span>
+      <a href="./assets/resume/Arnab_Mukherjee.pdf" download class="btn"><span>Resume</span>
+
         <i class="fas fa-arrow-circle-down"></i>
       </a>
       <div class="socials">
@@ -76,6 +75,7 @@
           </li>
           <li><a class="github" aria-label="GitHub" href="https://github.com/arnab-git-404" target="_blank"><i
                 class="fab fa-github"></i></a></li>
+
           <li><a class="twitter" aria-label="Twitter" href="https://twitter.com/Arnab_000/" target="_blank"><i
                 class="fab fa-twitter"></i></a></li>
           <li><a class="instagram" aria-label="Instagram" href="https://www.instagram.com/arnab.000/" target="_blank" ><i
@@ -93,9 +93,12 @@
 
   <!-- about section starts -->
   <section class="about" id="about">
+  
+
     <h2 class="heading"><i class="fas fa-user-alt"></i> About <span>Me</span></h2>
 
     <div class="row">
+
 
       <div class="image">
         <img draggable="false" class="tilt" src="./assets/images/arnab (1).jpg" alt="">
@@ -103,23 +106,23 @@
 
       <div class="content">
         <h3>I'm Arnab Mukherjee</h3>
-        <span class="tag">Second Year Student</span>
+        <span class="tag">Third Year Student</span>
         
         <p>I am CSE'26 Undergrad student at Bengal College Of Engineering & Technology (BCET) , Bidhannagar , Durgapur , West Bengal.
 
           I am very passionate about improving my coding skills & developing applications & websites...
           I build WebApps and Websites using FullStack Development.
           Working for myself to improve my skills.
-          Love to build Full-Stack clones. </p>
+          Love to build Full-Stack applications. </p>
 
         <div class="box-container">
           <div class="box">
         
-          </div>
+            </div>
 
           <div class="box">
-            <p><span> email : </span> mukherjeearnab988@gmail.com</p>
-            <p><span> place : </span> West Bengal, India - 731224</p>
+            <p><span> Email : </span> mukherjeearnab988@gmail.com</p>
+            <p><span> Place : </span> West Bengal, India - 731224</p>
           </div>
         </div>
 
@@ -157,6 +160,129 @@
   </section>
   <!-- skills section ends -->
 
+
+    <!-- work project section starts -->
+    <section class="work" id="work">
+
+      <h2 class="heading"><i class="fas fa-laptop-code"></i>My Mini<span> Projects</span></h2>
+  
+      <div class="box-container">
+  
+        <div class="box tilt">
+          <img draggable="false" src="./assets/images/projects/" alt="" />
+          <div class="content">
+            <div class="tag">
+              <h3>Portfolio Website</h3>
+            </div>
+            <div class="desc">
+              <p>Personal portfolio website. Don't need much info about it, just scroll down. You're here only!</p>
+              <div class="btns">
+                <a href="#" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
+                <a href="https://github.com/" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+  
+      </div>
+  
+      <div class="viewall">
+        <a href="/projects" class="btn"><span>View All</span>
+          <i class="fas fa-arrow-right"></i>
+        </a>
+      </div>
+  
+    </section>
+    <!-- work project section ends -->
+  
+  
+  
+    <!-- experience section starts -->
+    <section class="experience" id="experience">
+  
+      <h2 class="heading"><i class="fas fa-briefcase"></i> Experience </h2>
+  
+      <div class="timeline">
+  
+  
+        <div class="container right">
+          <div class="content">
+            <div class="tag">
+              <h2>Social Winter Of Code 2024</h2>
+            </div>
+            <div class="desc">
+              <h3>Contributor | Open Source Program</h3>
+              <p>December 2023 - present</p>
+            </div>
+          </div>
+        </div>
+  
+  
+        <div class="container left">
+          <div class="content">
+            <div class="tag">
+              <h2>Hacktoberfest 2023</h2>
+            </div>
+            <div class="desc">
+              <h3>Contributor | Open Source Program</h3>
+              <p>October 2023 - November 2023</p>
+            </div>
+          </div>
+        </div>
+  
+  
+        <div class="container right">
+          <div class="content">
+            <div class="tag">
+              <h2>Robonixx | BCET</h2>
+            </div>
+            <div class="desc">
+              <h3>Technical Team Member</h3>
+              <p>December 2023 - present</p>
+            </div>
+          </div>
+        </div>
+  
+  
+        <div class="container left">
+          <div class="content">
+            <div class="tag">
+              <h2>Code Vision | BCET</h2>
+            </div>
+            <div class="desc">
+              <h3>Coordinator</h3>
+              <p>December 2023 - present</p>
+            </div>
+          </div>
+        </div>
+  
+  
+        <div class="container right">
+          <div class="content">
+            <div class="tag">
+              <h2>Self Employed</h2>
+            </div>
+            <div class="desc">
+              <h3>Frontend Developer</h3>
+              <p>December 2023 - present</p>
+            </div>
+          </div>
+        </div>
+  
+  
+      </div>
+  
+      <div class="morebtn">
+        <a href="/experience" class="btn"><span>View All</span>
+          <i class="fas fa-arrow-right"></i>
+        </a>
+      </div>
+  
+      </div>
+  
+    </section>
+    <!-- experience section ends -->
+  
 
   <!-- education section starts -->
   <section class="education" id="education">
@@ -225,127 +351,8 @@
   <!-- education section ends -->
 
 
-  <!-- work project section starts -->
-  <section class="work" id="work">
-
-    <h2 class="heading"><i class="fas fa-laptop-code"></i>My Mini<span> Projects</span></h2>
-
-    <div class="box-container">
-
-      <div class="box tilt">
-        <img draggable="false" src="./assets/images/projects/" alt="" />
-        <div class="content">
-          <div class="tag">
-            <h3>Portfolio Website</h3>
-          </div>
-          <div class="desc">
-            <p>Personal portfolio website. Don't need much info about it, just scroll down. You're here only!</p>
-            <div class="btns">
-              <a href="#" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
-              <a href="https://github.com/" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
-            </div>
-          </div>
-        </div>
-      </div>
-
-    </div>
-
-    <div class="viewall">
-      <a href="/projects" class="btn"><span>View All</span>
-        <i class="fas fa-arrow-right"></i>
-      </a>
-    </div>
-
-  </section>
-  <!-- work project section ends -->
 
 
-
-  <!-- experience section starts -->
-  <section class="experience" id="experience">
-
-    <h2 class="heading"><i class="fas fa-briefcase"></i> Experience </h2>
-
-    <div class="timeline">
-
-
-      <div class="container right">
-        <div class="content">
-          <div class="tag">
-            <h2>Social Winter Of Code 2024</h2>
-          </div>
-          <div class="desc">
-            <h3>Contributor | Open Source Program</h3>
-            <p>December 2023 - present</p>
-          </div>
-        </div>
-      </div>
-
-
-      <div class="container left">
-        <div class="content">
-          <div class="tag">
-            <h2>Hacktoberfest 2023</h2>
-          </div>
-          <div class="desc">
-            <h3>Contributor | Open Source Program</h3>
-            <p>October 2023 - November 2023</p>
-          </div>
-        </div>
-      </div>
-
-
-      <div class="container right">
-        <div class="content">
-          <div class="tag">
-            <h2>Robonixx | BCET</h2>
-          </div>
-          <div class="desc">
-            <h3>Technical Team Member</h3>
-            <p>December 2023 - present</p>
-          </div>
-        </div>
-      </div>
-
-
-      <div class="container left">
-        <div class="content">
-          <div class="tag">
-            <h2>Code Vision | BCET</h2>
-          </div>
-          <div class="desc">
-            <h3>Coordinator</h3>
-            <p>December 2023 - present</p>
-          </div>
-        </div>
-      </div>
-
-
-      <div class="container right">
-        <div class="content">
-          <div class="tag">
-            <h2>Self Employed</h2>
-          </div>
-          <div class="desc">
-            <h3>Frontend Developer</h3>
-            <p>December 2023 - present</p>
-          </div>
-        </div>
-      </div>
-
-
-    </div>
-
-    <div class="morebtn">
-      <a href="/experience" class="btn"><span>View All</span>
-        <i class="fas fa-arrow-right"></i>
-      </a>
-    </div>
-
-    </div>
-
-  </section>
-  <!-- experience section ends -->
 
   <!-- contact section starts -->
   <section class="contact" id="contact">
