--- a/experience/index.html
+++ b/experience/index.html
@@ -47,6 +47,19 @@
 
     <div class="timeline">
 
+      <div class="container left">
+        <div class="content">
+          <div class="tag">
+            <h2>Google Developer Groups Lead(GDSC Lead)</h2>
+          </div>
+          <div class="desc">
+            <h3>Lead Organizer of GDG OnCampus BECT</h3>
+            <p>September 2024 - present</p>
+          </div>
+        </div>
+      </div>
+
+
       <div class="container right">
         <div class="content">
           <div class="tag">
@@ -58,6 +71,7 @@
           </div>
         </div>
       </div>
+
 
 
       <div class="container left">
@@ -92,7 +106,7 @@
             <h2>Code Vision | BCET</h2>
           </div>
           <div class="desc">
-            <h3>Coordinator</h3>
+            <h3>Organizer</h3>
             <p>December 2023 - present</p>
           </div>
         </div>
