--- a/index.html
+++ b/index.html
@@ -230,8 +230,8 @@
 
     </div>
     <div class="modal-footer">
-      <a id="modal-live-link" href="#" class="btn" target="_blank">Live Demo</a>
-      <a id="modal-code-link" href="#" class="btn" target="_blank">View Code</a>
+      <a id="modal-live-link" href="" class="btn" target="_blank">Live Demo</a>
+      <a id="modal-code-link" href="" class="btn" target="_blank">View Code</a>
     </div>
   </div>
 </div>
