--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
       <div class="content">
         <h3>I'm Arnab Mukherjee</h3>
-        <span class="tag">Third Year Student</span>
+        <span class="tag">Final Year Student</span>
         
         <p>I am CSE'26 Undergrad student at Bengal College Of Engineering & Technology (BCET) , Bidhannagar , Durgapur , West Bengal.
 
@@ -127,7 +127,7 @@
         </div>
 
         <div class="resumebtn">
-          <a aria-label="LinkedIn" href="https://www.linkedin.com/in/arnab000/" target="_blank"
+          <a aria-label="LinkedIn" href="https://www.linkedin.com/in/0xarnab/" target="_blank"
             class="btn"><span>LinkedIn</span>
             <i class="fas fa-chevron-right"></i>
           </a>
