--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
         <ul id="modal-project-features"></ul>
         
         <h3>Challenges & Solutions</h3>
-        <p id="modal-project-challenges"></p>
+        <ul id="modal-project-challenges"></ul>
       </div>
 
     </div>
