--- a/index.html
+++ b/index.html
@@ -69,16 +69,16 @@
       <div class="socials">
         <ul class="social-icons">
           <li>
-            <a class="linkedin" aria-label="LinkedIn" href="https://www.linkedin.com/in/arnab000/" target="_blank">
+            <a class="linkedin" aria-label="LinkedIn" href="https://www.linkedin.com/in/0xarnab/" target="_blank">
               <i class="fab fa-linkedin"></i>
             </a>
           </li>
           <li><a class="github" aria-label="GitHub" href="https://github.com/arnab-git-404" target="_blank"><i
                 class="fab fa-github"></i></a></li>
 
-          <li><a class="twitter" aria-label="Twitter" href="https://twitter.com/Arnab_000/" target="_blank"><i
+          <li><a class="twitter" aria-label="Twitter" href="https://twitter.com/0x_arnab/" target="_blank"><i
                 class="fab fa-twitter"></i></a></li>
-          <li><a class="instagram" aria-label="Instagram" href="https://www.instagram.com/arnab.000/" target="_blank" ><i
+          <li><a class="instagram" aria-label="Instagram" href="https://www.instagram.com/0xarnab/" target="_blank" ><i
                 class="fab fa-instagram"></i></a></li>
         </ul>
       </div>
