--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
           <li><a class="twitter" aria-label="Twitter" href="https://twitter.com/0x_arnab/" target="_blank"><i
                 class="fab fa-twitter"></i></a></li>
-          <li><a class="instagram" aria-label="Instagram" href="https://www.instagram.com/0xarnab/" target="_blank" ><i
+          <li><a class="instagram" aria-label="Instagram" href="https://www.instagram.com/0x_arnab/" target="_blank" ><i
                 class="fab fa-instagram"></i></a></li>
         </ul>
       </div>
